--- a/12/MDK-ARM/12/12.build_log.htm
+++ b/12/MDK-ARM/12/12.build_log.htm
@@ -35,3 +35,46 @@ compiling main.c...
 compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
+compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_dma_ex.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_pwr_ex.c...
+compiling stm32h7xx_hal_i2c.c...
+compiling stm32h7xx_hal_i2c_ex.c...
+compiling system_stm32h7xx.c...
+compiling stm32h7xx_hal_exti.c...
+linking...
+Program Size: Code=3978 RO-data=714 RW-data=20 ZI-data=1636  
+FromELF: creating hex file...
+"12\12.axf" - 0 Error(s), 0 Warning(s).
+
+<h2>Software Packages used:</h2>
+
+Package Vendor: ARM
+                http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
+                ARM.CMSIS.5.6.0
+                CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.3.0
+
+Package Vendor: Keil
+                https://www.keil.com/pack/Keil.STM32H7xx_DFP.2.6.0.pack
+                Keil.STM32H7xx_DFP.2.6.0
+                STMicroelectronics STM32H7 Series Device Support and Examples
+
+<h2>Collection of Component include folders:</h2>
+  .\RTE\_12
+  C:\Users\Dell\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\Core\Include
+  C:\Users\Dell\AppData\Local\Arm\Packs\Keil\STM32H7xx_DFP\2.6.0\Drivers\CMSIS\Device\ST\STM32H7xx\Include
+
+<h2>Collection of Component Files used:</h2>
+
+   * Component: ARM::CMSIS:CORE:5.3.0
+Build Time Elapsed:  00:02:24
+</pre>
+</body>
+</html>
